fix the gamepad canvas gap (#22)

--- a/scss/canvasContainer.scss
+++ b/scss/canvasContainer.scss
@@ -1,14 +1,17 @@
 @import 'common';
+$canvas-gap-adjustment: 5 * .125;
+$canvas-width-adjustment: 20;
+$canvas-adjusted-gap: $canvas-gap * $canvas-gap-adjustment;
 
 #canvas-container {
   @each $slider-value, $width in (1: 1, 2: 2, 3: 4) {
     &[data-width='#{$slider-value}'] {
       width:
         $width * $canvas-width +
-        ( $width - 1 ) * $canvas-gap;
+        ( $width + $canvas-width-adjustment);
       height:
         ( 4 / $width ) * $canvas-height +
-        ( 4 / $width - 1) * $canvas-gap;
+        ( 4 / $width + $canvas-height - $canvas-width-adjustment);
     }
   }
   
@@ -18,6 +21,7 @@
     position: relative;
     width: $canvas-width;
     height: $canvas-height;
+    margin: 0 .5 * $canvas-gap .5 * $canvas-gap 0;
     // even if canvas is somehow overlapping with control panel, it will be on top
     z-index: 1;
     // layers in the slot
@@ -34,3 +38,11 @@
     }
   }
 }
+
+// shamefully apply the temporary fix to keep the gamepad cavnas gaps at 8px.
+#canvas-container[data-width='2'] > div:nth-child(2n-1) {margin-right: 4px;}
+#canvas-container[data-width='2'] > div:nth-child(2n) {margin-right: -1px;}
+#canvas-container[data-width='3'] > div {margin-right: 4px;}
+#canvas-container[data-width='3'] > div:nth-child(2) {margin-right: 3px;}
+#canvas-container[data-width='3'] > div:last-child {margin-right: -1px;}
+
