--- a/scss/main.scss
+++ b/scss/main.scss
@@ -90,8 +90,8 @@ select::-webkit-scrollbar-thumb {
 
 #canvas-container {
   // these makes gaps between canvas to be always 8px
-  letter-spacing: $canvas-gap - 10px;
-  line-height: 2 * $canvas-gap + 10px;
+  //letter-spacing: $canvas-gap - 10px;
+  //line-height: 2 * $canvas-gap + 10px;
   // ensure contrast of fallback text on default black background
   canvas {
     color: grey;
